Aggiunta regola prova

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             <img src="assets/images/M_Section1/1915-Girls-2024-Homepage-Hero-Standard-01-Large-KV-2.webp" />
           </div>
           <div class="testoslider-main1">
-            <img src="assets/images/M_Section1/icons-logo-pos-600w.png" />
-            <h1>On the hunt on Easter Treats?</h1>
-            <h3>Make Easter more amazing with LEGO gift</h3>
+            <!-- <img src="assets/images/M_Section1/icons-logo-pos-600w.png" /> -->
+            <h1>Endless worlds to create</h1>
+            <h3>Watch them Play Unstoppable and inspire their creativity without limits.</h3>
             <a href="#">Shop now <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
