fixed buttons in section 1; fixed color in navbar menu (same yellow)

--- a/index.html
+++ b/index.html
@@ -168,16 +168,18 @@
             <!-- <img src="assets/images/M_Section1/icons-logo-pos-600w.png" /> -->
             <h1>Endless worlds to create</h1>
             <h3>Watch them Play Unstoppable and inspire their creativity without limits.</h3>
-            <a href="#" class="shop-now-s1">Shop now <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
-                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-              </svg></a>
-            <a href="#" class="shop-now-s1">Learn more <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
-                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-              </svg></a>
+            <div class="buttons-main1">
+              <a href="#" class="shop-now-s1">Shop now <svg width="10" height="13" viewBox="0 0 18 28"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></a>
+              <a href="#" class="shop-now-s1">Learn more <svg width="10" height="13" viewBox="0 0 18 28"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></a>
+            </div>
           </div>
         </div>
         <div class="background_main1">
