Aggiunte modifiche all navbar

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </svg></a>
             </div>
             <div class="mar10">
-              <span class="mar10-day-sale">MAR10 Day Sale</span>
-              <a href="#" class="mar10-shop-now">Shop now</a>
+              <span class="mar10-day-sale">Spring Garden House gift with purchases of 80 € or more*</span>
+              <a href="#" class="mar10-shop-now">Learn more</a>
             </div>
             <div class="r-btn-nav-controls">
               <a class="r-btn-nav btn"><svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true"
