updated icons and fixed section2 title weight

--- a/index.html
+++ b/index.html
@@ -196,18 +196,18 @@
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Offer.png" alt="Offers" />
               <span>Offers</span>
             </a>
+            <a href="link-placeholder-starwars" class="icon">
+              <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
+              <span class="italic-text-icon">Star Wars™</span>
+            </a>
             <a href="link-placeholder-bestsellers" class="icon">
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Best.png"
                 alt="Bestsellers" />
-              <span>Bestsellers</span>
-            </a>
-            <a href="link-placeholder-starwars" class="icon">
-              <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
-              <span>Star Wars</span>
+              <span>Last Chance</span>
             </a>
             <a href="link-placeholder-fathersday" class="icon">
               <img src="assets/images/M_Section1/FathersDay-Page-202305-Quicklink.png" alt="Fathers Day" />
-              <span>Fathers Day</span>
+              <span>Easter</span>
             </a>
             <a href="link-placeholder-harrypotter" class="icon">
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-HP.png" alt="Harry Potter" />
