--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </svg></a>
             </div>
             <div class="mar10">
-              <span class="mar10-day-sale">Spring Garden House gift with purchases of 80 € or more*</span>
+              <span class="mar10-day-sale">MAR10 DAY *</span> <!--Modifichiamo questa parte (è insidioso)-->
               <a href="#" class="mar10-shop-now">Learn more</a>
             </div>
             <div class="r-btn-nav-controls">
