Aggiunte modifiche all'html

--- a/index.html
+++ b/index.html
@@ -196,18 +196,18 @@
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Offer.png" alt="Offers" />
               <span>Offers</span>
             </a>
-            <a href="link-placeholder-starwars" class="icon">
-              <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
-              <span class="italic-text-icon">Star Wars™</span>
-            </a>
             <a href="link-placeholder-bestsellers" class="icon">
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Best.png"
                 alt="Bestsellers" />
-              <span>Last Chance</span>
+              <span>Bestsellers</span>
+            </a>
+            <a href="link-placeholder-starwars" class="icon">
+              <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
+              <span>Star Wars</span>
             </a>
             <a href="link-placeholder-fathersday" class="icon">
               <img src="assets/images/M_Section1/FathersDay-Page-202305-Quicklink.png" alt="Fathers Day" />
-              <span>Easter</span>
+              <span>Fathers Day</span>
             </a>
             <a href="link-placeholder-harrypotter" class="icon">
               <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-HP.png" alt="Harry Potter" />
@@ -227,7 +227,7 @@
           <section class="container-section2">
             <section class="main-section2">
               <div class="title-main-section2">
-                <h2>This week's top picks</h2>
+                <h2 class="title-s2">This week's top picks</h2>
               </div>
               <div class="container-s2">
                 <a href="#">
@@ -1708,7 +1708,7 @@
           <section class="container-section8">
             <section class="main-section8">
               <div class="title-main-section8">
-                <h2>So many ways to Play Unstoppable</h2>
+                <h2 class="title-s8">So many ways to Play Unstoppable</h2>
               </div>
               <div class="container-s8">
                 <a href="#">
@@ -1880,7 +1880,7 @@
                     <div class="card">
                       <img class="img-section9" src="assets/images/M_Section9/img3-section9.jpg" alt="Immagine2" />
                       <div class="card-body9">
-                        <h3 class="card-title container-h3-s8">The Best LEGO® Easter Basket Ideas</h3>
+                        <h3 class="card-title container-h3-s9">The Best LEGO® Easter Basket Ideas</h3>
                       </div>
                       <div class="card-body9">
                         <p class="card-text9 container-text-s9">
