--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   d="M29.493.597l.095.084 6.535 6.54a1 1 0 01.083 1.319l-.083.094-6.535 6.54a1 1 0 01-1.498-1.32l.083-.094 4.83-4.834-31.908.001A1 1 0 01.98 6.934l.116-.007h31.907l-4.83-4.833a1 1 0 01-.082-1.32l.083-.094a1 1 0 011.32-.083z">
                 </path>
               </svg>
-              AREA GIOCHI</a>
+              PLAY ZONE</a>
           </div>
           <div class="mar10-button-lr">
             <div class="l-btn-nav-controls">
