Aggiustati link footer1

--- a/index.html
+++ b/index.html
@@ -2324,16 +2324,14 @@
             gift for toddlers, kids, teens and adults for<a href="https://www.lego.com/en-gb/gifts/birthday-gifts">
               birthdays</a> or other occasions such as<a
               href="https://www.lego.com/en-gb/valentines-day/gifts">Valentine's Day
-            </a> , <a href="https://www.lego.com/en-gb/mothers-day-gift-ideas">Mother's Day </a> and <a
-              href="https://www.lego.com/en-gb/fathers-day/gift-ideas">Father's Day </a>. We make it easy to shop for
+            </a>, <a href="https://www.lego.com/en-gb/mothers-day-gift-ideas">Mother's Day </a> and <a
+              href="https://www.lego.com/en-gb/fathers-day/gift-ideas">Father's Day</a>. We make it easy to shop for
             toys that
             will provide hours of fun and imaginative play. You’ll also find curated <a
               href="https://www.lego.com/en-gb/categories/adults-welcome">LEGO sets for adults </a> perfectly matching
-            their <a href="https://www.lego.com/en-gb/categories/interests">interests </a>, such as<a
-              href="https://www.lego.com/en-gb/categories/cars">cars </a> , <a
-              href="https://www.lego.com/en-gb/themes/adults-welcome/botanical-collection/artificial-flowers">flowers
-            </a> , <a href="https://www.lego.com/en-gb/categories/gaming">gaming </a> and much more!</p>
-        </div>
+            their <a href="https://www.lego.com/en-gb/categories/interests">interests</a>, such as<a
+              href="https://www.lego.com/en-gb/categories/cars"> cars</a>, <a
+              href="https://www.lego.com/en-gb/themes/adults-welcome/botanical-collection/artificial-flowers">flowers</a>, <a href="https://www.lego.com/en-gb/categories/gaming">gaming</a> and much more!</p></div>
       </section>
 
 
