media query tablet footer

--- a/index.html
+++ b/index.html
@@ -2387,6 +2387,7 @@
               </div>
             </div>
             <div class="box2-footer2">
+              <div class="column">
               <div class="box2-ul">
                 <h3>ABOUT US</h3>
                 <ul class="li-f2">
@@ -2399,7 +2400,9 @@
                   <li><a href="#" class="li-f2-link">LEGO Compliance Line</a></li>
                 </ul>
               </div>
+            </div>
               <div class="box2-ul">
+                <div class="column">
                 <h3>SUPPORT</h3>
                 <ul class="li-f2">
                   <li><a href="#" class="li-f2-link">Contact us</a></li>
@@ -2411,15 +2414,19 @@
                   <li><a href="#" class="li-f2-link">Product recalls</a></li>
                 </ul>
               </div>
+            </div>
               <div class="box2-ul">
+                <div class="column">
                 <h3>ATTRACTIONS</h3>
                 <ul class="li-f2">
                   <li><a href="#" class="li-f2-link">LEGO® House</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND® Parks</a></li>
                   <li><a href="#" class="li-f2-link">LEGOLAND Discovery Centers</a></li>
                 </ul>
+                </div>
               </div>
               <div class="box2-ul">
+                <div class="column">
                 <h3>MORE FROM US</h3>
                 <ul class="li-f2">
                   <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
@@ -2430,6 +2437,7 @@
                   <li><a href="#" class="li-f2-link">Student Offers</a></li>
                   <li><a href="#" class="li-f2-link">LEGO Braille Bricks</a></li>
                 </ul>
+              </div>
               </div>
             </div>
           </div>
