Aggiunte modifiche ai caroselli2

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             </div>
                           </div>    
                           <!--immagine del prodotto-->
-                          <img class="img-carousel-section3" src="assets\images\dune atreides product.png" alt="dune">
+                          <img class="img-carousel-section3" src="assets/images/M_Section3/img-carosello-new.webp" alt="dune">
 
                         </div>
                         
