Aggiunto file css per i @media

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/global_style.css" />
+  <link rel="stylesheet" href="CSS/media-global_style.css">
   <script src="https://kit.fontawesome.com/fc4d194322.js" crossorigin="anonymous"></script>
 
   <title data-test="title-tag">Home | LEGO® Shop ufficiale IT </title>
