aggiustato footer 1 , rifatto footer 2 e in fine messo tutto nella media global

--- a/index.html
+++ b/index.html
@@ -2442,6 +2442,7 @@
               </div>
             </div>
           </div>
+          <hr class="line-divider"> 
           <div class="div2-footer2">
             <div class="box3-footer2">
               <div class="subscribe-footer2">
