sistemata responsività navbar tablet

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         d="M7.125 8.868a.94.94 0 00-.938-.943.94.94 0 00-.937.943c0 .52.42.943.938.943a.94.94 0 00.937-.943zm4.688-.943a.94.94 0 00-.938.943c0 .52.42.943.938.943a.94.94 0 00.937-.943.94.94 0 00-.938-.943zm.293 3.86a.452.452 0 00-.649.21c-.005.008-.461.84-2.463.84-1.953 0-2.437-.793-2.462-.84a.446.446 0 00-.638-.234.618.618 0 00-.215.761c.063.147.69 1.446 3.315 1.446s3.25-1.299 3.313-1.446a.609.609 0 00-.201-.738z"
                         fill="#2C2C2C"></path>
                     </g>
-                  </svg>Sign in</a>
+                  </svg> <span>Sign in</span></a>
               </div>
               <div class="sign-in-divisor">
                 <span class="sign-in-span2">|</span>
@@ -86,12 +86,12 @@
                   d="M1 16.2592H8.12587V9.95541C8.12587 8.8478 9.01485 8 10.1437 8H29.8422C30.9851 8 31.86 8.86147 31.86 9.95541V16.2592H39V31H1V16.2592Z"
                   fill="#00A3DA" />
               </svg>
-              <a href="#" class="sign-in-link-style">Join LEGO® Insiders</a>
+              <a href="#" class="sign-in-link-style"><span>Join LEGO® Insiders</span></a>
             </div>
           </div>
         </div>
       </section>
-      <section id="menu-container">
+      <section class="menu-container">
         <div class="menu">
           <div class="menu-logo-links">
             <div class="menu-logo">
