Piccoli test per le modifiche alla versione mobile

--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
   </header>
   <div class="contenitore-generale">
     <main>
+      <section class="m-section1-mobile">
+        <div class="img-section1-mobile">
+          <img width="768px" class="imgs1-mobile" src="assets/images/M_Section1/Section1-mobile.png" alt="">
+        </div>
+        <div class="text-section1-mobile"></div>
+      </section>
       <section class="m_section1">
         <div class="contenitore-main1">
           <div class="align-slider-main1">
