Aggiunte modifiche alla section 8

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <main>
       <section class="m-section1-mobile">
         <div class="img-section1-mobile">
-          <img width="768px" class="imgs1-mobile" src="assets/images/M_Section1/Section1-mobile.png" alt="">
+          <img width="768px"class="imgs1-mobile" src="assets/images/M_Section1/Section1-mobile.png" alt="">
         </div>
         <div class="text-section1-mobile"></div>
       </section>
@@ -2098,6 +2098,9 @@
         </section>
         <section class="m_section8">
           <!--SECTION8-->
+          <div class="title-main-section8-mobile">
+            <h2 class="title-s8-mobile">So many ways to Play Unstoppable</h2>
+          </div>
           <section class="container-section8">
             <section class="main-section8">
               <div class="title-main-section8">
