--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/global_style.css" />
-  <link rel="stylesheet" href="CSS/media-global_style.css">
+  <link rel="stylesheet" href="CSS/global_style.css"> <!-- CSS principale per la versione desktop -->
+  <link rel="stylesheet" href="CSS/media-tablet.css"> <!-- CSS per la versione tablet -->
+  <link rel="stylesheet" href="CSS/media-iphone.css"> <!-- CSS per la versione iPhone -->
+
   <script src="https://kit.fontawesome.com/fc4d194322.js" crossorigin="anonymous"></script>
 
   <title data-test="title-tag">Home | LEGO® Shop ufficiale IT </title>
