Aggiunte modifiche alla section1

--- a/index.html
+++ b/index.html
@@ -166,7 +166,30 @@
         <div class="img-section1-mobile">
           <img width="768px"class="imgs1-mobile" src="assets/images/M_Section1/Section1-mobile.png" alt="">
         </div>
-        <div class="text-section1-mobile"></div>
+        <div class="contenitore-generale1-mobile">
+          <div class="contenitore-section1-mobile">
+            <div class="testo-section1-mobile">
+              <h2>Discover endless worlds of wonder</h2>
+              <p>Watch them Play Unstoppable and inspire their creativity
+                without limits.</p>
+              <div class="iper-shop-now1-mobile">
+                <div class="shop-now6">
+                  <a href="#" class="iper1-mobile">Shop now <svg width="16" height="16" viewBox="0 0 18 28"
+                      aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                      <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                    </svg> </a>
+                </div>
+                <div class="shop-now6">
+                  <a href="#" class="iper1-mobile">Learn more <svg width="16" height="16" viewBox="0 0 18 28"
+                      aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                      class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn">
+                      <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                    </svg> </a>
+                </div>
+              </div>
+            </div>
+          </div>
       </section>
       <section class="m_section1">
         <div class="contenitore-main1">
@@ -2216,11 +2239,11 @@
           </div>
         </section>
         <section class="m-section9">
+          <div class="title-main-section9">
+            <h2>So many ways to Play Unstoppable</h2>
+          </div>
           <section class="container-section9">
             <section class="main-section9">
-              <div class="title-main-section9">
-                <h2>So many ways to Play Unstoppable</h2>
-              </div>
               <div class="container-s9">
                 <a href="#">
                   <div class="container-card9 card1">
