Aggiunte modifiche alla section2 versione iphone

--- a/index.html
+++ b/index.html
@@ -294,6 +294,92 @@
       </section>
       <!--SECTION2-->
       <div class="width-adjuster">
+        <section class="m_section2-mobile">
+          <div class="title-main-section2-mobile">
+            <h2 class="title-s2-mobile">This week's top picks</h2>
+          </div>
+          <section class="container-section2-mobile">
+            <section class="main-section2-mobile">
+              <div class="container-s2-mobile">
+                <a href="#">
+                  <div class="container-card card1">
+                    <div class="card">
+                      <img class="img-section2" src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" />
+                      <div class="card-body">
+                        <h3 class="card-title container-h3-s2">
+                          Snow White and the Seven Dwarfs' Cottage
+                        </h3>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text container-text-s2">
+                          Relive sweet memories with a charming new set based on the
+                          classic film.
+                        </p>
+                      </div>
+                      <div class="card-body container-shop-now2">
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                          <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="container-card card2">
+                    <div class="card">
+                      <img class="img-section2" src="assets/images/M_Section2/img2-section2-aggiornata.webp"
+                        alt="Immagine2" />
+                      <div class="card-body">
+                        <h3 class="card-title container-h3-s2">10 March is "MAR10 Day"</h3>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text container-text-s2">
+                          Check out our sale and get double points on LEGO® Super
+                          Mario™ sets, 04/03-11/03.*
+                        </p>
+                      </div>
+                      <div class="card-body container-shop-now2 snow2-2">
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                          <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="container-card card3">
+                    <div class="card">
+                      <img class="img-section2" src="assets/images/technic per main 2.jpg" alt="Immagine3" />
+                      <div class="card-body">
+                        <h3 class="card-title container-h3-s2">Get into your creative zone</h3>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text container-text-s2">
+                          New LEGO® Technic sets feature authentic details for racing
+                          fans.
+                        </p>
+                      </div>
+                      <div class="card-body container-shop-now2 snow2-3">
+                        <a href="#" class="shop-now2 iper-centrale-s2 ">Shop now </a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                          <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </section>
+          </section>
+        </section>
         <section class="m_section2">
           <section class="container-section2">
             <section class="main-section2">
