--- a/index.html
+++ b/index.html
@@ -192,40 +192,44 @@
           </div>
           <div class="background_main1-mobile">
             <div class="icon-container-mobile">
-              <a href="link-placeholder-new" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-New.png" alt="New" />
-                <span>New</span>
-              </a>
-              <a href="link-placeholder-exclusives" class="icon">
-                <img src="assets/images/M_Section1/43242-Exclusive-202403-Quicklink.png" alt="Exclusives" />
-                <span>Exclusives</span>
-              </a>
-              <a href="link-placeholder-offers" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Offer.png" alt="Offers" />
-                <span>Offers</span>
-              </a>
-              <a href="link-placeholder-bestsellers" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Best.png"
-                  alt="Bestsellers" />
-                <span>Bestsellers</span>
-              </a>
-              <a href="link-placeholder-starwars" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
-                <span>Star Wars</span>
-              </a>
-              <a href="link-placeholder-fathersday" class="icon">
-                <img src="assets/images/M_Section1/FathersDay-Page-202305-Quicklink.png" alt="Fathers Day" />
-                <span>Fathers Day</span>
-              </a>
-              <a href="link-placeholder-harrypotter" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-HP.png" alt="Harry Potter" />
-                <span>Harry Potter</span>
-              </a>
-              <a href="link-placeholder-legoinsiders" class="icon">
-                <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Insiders.png"
-                  alt="Lego Insiders" />
-                <span>Lego Insiders</span>
-              </a>
+              <div class="icons1-4-mobile">
+                <a href="link-placeholder-new" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-New.png" alt="New" />
+                  <span>New</span>
+                </a>
+                <a href="link-placeholder-exclusives" class="icon">
+                  <img src="assets/images/M_Section1/43242-Exclusive-202403-Quicklink.png" alt="Exclusives" />
+                  <span>Exclusives</span>
+                </a>
+                <a href="link-placeholder-offers" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Offer.png" alt="Offers" />
+                  <span>Offers</span>
+                </a>
+                <a href="link-placeholder-bestsellers" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Best.png"
+                    alt="Bestsellers" />
+                  <span>Bestsellers</span>
+                </a>
+              </div>
+              <div class="icons5-8-mobile">
+                <a href="link-placeholder-starwars" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-SW.png" alt="Star Wars" />
+                  <span>Star Wars</span>
+                </a>
+                <a href="link-placeholder-fathersday" class="icon">
+                  <img src="assets/images/M_Section1/FathersDay-Page-202305-Quicklink.png" alt="Fathers Day" />
+                  <span>Fathers Day</span>
+                </a>
+                <a href="link-placeholder-harrypotter" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-HP.png" alt="Harry Potter" />
+                  <span>Harry Potter</span>
+                </a>
+                <a href="link-placeholder-legoinsiders" class="icon">
+                  <img src="assets/images/M_Section1/Jan-Feb-DrivePeriod-Home-202401-Quicklink-Insiders.png"
+                    alt="Lego Insiders" />
+                  <span>Lego Insiders</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
