Aggiunto overlay al click dell'hamburger menu

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
           </div>
         </div>
       </section>
+      <div class="overlay" id="overlay">
+        <div class="overlay-content">
+          <!-- Contenuto del menu a tutta pagina -->
+          <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+          </ul>
+        </div>
+      </div>
 
     </section>
     <section class="navbar-container-general">
