--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
       <div class="overlay" id="overlay">
         <div class="overlay-content">
           <!-- Contenuto del menu a tutta pagina -->
+          <div class="overlay-bar">
+            <span class="overlay-bar-text">MENU</span>
+            <button aria-label="Close" data-test="mobile-global-banner-close-btn" class="x-button-mobile-overlay">
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" aria-hidden="true" class="Icon__StyledSVG-lm07h6-0 dHKzVM">
+              <path d="M10.377 8.142l5.953-5.954-2.234-2.234-5.954 5.954L2.188-.046-.046 2.188l5.954 5.954-5.954 5.954 2.234 2.234 5.954-5.953 5.954 5.953 2.234-2.234z" fill="currentColor" fill-rule="evenodd">
+              </path>
+              </svg>
+           </button>
+          </div>
           <ul>
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
