Aggiunti link all'overlay

--- a/index.html
+++ b/index.html
@@ -144,17 +144,70 @@
           <div class="overlay-bar">
             <span class="overlay-bar-text">MENU</span>
             <button aria-label="Close" data-test="mobile-global-banner-close-btn" class="x-button-mobile-overlay">
-              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" aria-hidden="true" class="icon-xbutton-mobile">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 17 17" aria-hidden="true" class="icon-xbutton-mobile">
               <path d="M10.377 8.142l5.953-5.954-2.234-2.234-5.954 5.954L2.188-.046-.046 2.188l5.954 5.954-5.954 5.954 2.234 2.234 5.954-5.953 5.954 5.953 2.234-2.234z" fill="currentColor" fill-rule="evenodd">
               </path>
               </svg>
            </button>
           </div>
-          <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>
+          <div class="links-overlay-container">
+            <div class="link-overlay area-giochi-mobile">
+              <a href="https://kids.lego.com/it-it/play" class="button-area-giochi-mobile"><svg width="15" height="16"
+                viewBox="0 0 37 16" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                class="Icon__StyledSVG-lm07h6-0 SkYtC UtilityBarstyles__KidsIcon-sc-1uwh8t8-2 fZmJyP"
+                style="transform: scaleX(1);">
+                <path fill="currentColor"
+                  d="M29.493.597l.095.084 6.535 6.54a1 1 0 01.083 1.319l-.083.094-6.535 6.54a1 1 0 01-1.498-1.32l.083-.094 4.83-4.834-31.908.001A1 1 0 01.98 6.934l.116-.007h31.907l-4.83-4.833a1 1 0 01-.082-1.32l.083-.094a1 1 0 011.32-.083z">
+                </path>
+              </svg>
+              PLAY ZONE</a>
+            </div>
+            <div class="link-overlay 2">
+                <a href="#" class="menu-link hover-underline shop-link">SHOP</a>
+            </div>
+            <div class="link-overlay 3">
+              <a href="#" class="menu-link hover-underline discover-link">DISCOVER</a>
+            </div>
+            <div class="link-overlay 4">
+              <a href="#" class="menu-link hover-underline help-link">HELP</a>
+            </div>
+            <div class="link-overlay 5">
+              <a href="#" class="menu-link mday-link">MARIO DAY</a>
+            </div>
+            <div class="link-overlay 6">
+              <div class="sign-in-text">
+                <a href="#" class="sign-in-link-style"> <svg width="20" height="22" viewBox="0 0 20 22"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    class="Icon__StyledSVG-lm07h6-0 cnHyRF UtilityBarstyles__AccountIcon-sc-1uwh8t8-5 KHcEY">
+                    <g transform="translate(1 1)" fill-rule="nonzero" fill="none">
+                      <rect stroke="#2C2C2C" stroke-width="1.5" fill="#FFCF00" x="4.875" width="8.25" height="6.038"
+                        rx=".729"></rect>
+                      <rect stroke="#2C2C2C" stroke-width="1.2" fill="#FFCF00" x="3.75" y="14.34" width="10.5"
+                        height="5.66" rx=".729"></rect>
+                      <path
+                        d="M14.25 17.736H3.75C0 17.736 0 14.717 0 14.717v-8.68S0 3.02 3.75 3.02h10.5C18 3.019 18 6.038 18 6.038v8.679s0 3.019-3.75 3.019z"
+                        stroke="#2C2C2C" stroke-width="1.5" fill="#FFCF00"></path>
+                      <path
+                        d="M7.125 8.868a.94.94 0 00-.938-.943.94.94 0 00-.937.943c0 .52.42.943.938.943a.94.94 0 00.937-.943zm4.688-.943a.94.94 0 00-.938.943c0 .52.42.943.938.943a.94.94 0 00.937-.943.94.94 0 00-.938-.943zm.293 3.86a.452.452 0 00-.649.21c-.005.008-.461.84-2.463.84-1.953 0-2.437-.793-2.462-.84a.446.446 0 00-.638-.234.618.618 0 00-.215.761c.063.147.69 1.446 3.315 1.446s3.25-1.299 3.313-1.446a.609.609 0 00-.201-.738z"
+                        fill="#2C2C2C"></path>
+                    </g>
+                  </svg> <span>Sign in</span></a>
+              </div>
+            </div>
+            <div class="link-overlay 7">
+              <div class="sign-in-join">
+                <svg width="20" height="22" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M1 16.2592H8.12587V9.95541C8.12587 8.8478 9.01485 8 10.1437 8H29.8422C30.9851 8 31.86 8.86147 31.86 9.95541V16.2592H39V31H1V16.2592Z"
+                    fill="#00A3DA" />
+                </svg>
+                <a href="#" class="sign-in-link-style"><span>Join LEGO® Insiders</span></a>
+              </div>
+            </div>
+            <div class="link-overlay 8"></div>
+            <div class="link-overlay 9"></div>
+            <div class="link-overlay 10"></div>
+          </div>
         </div>
       </div>
 
