--- a/index.html
+++ b/index.html
@@ -163,20 +163,28 @@
               PLAY ZONE</a>
             </div>
             <div class="link-overlay 2">
-                <a href="#" class="menu-link hover-underline shop-link">SHOP</a>
+              <div class="overlay-link-mobile home-overlay-link">
+                <a href="#" class="menu-link hover-underline shop-link">HOME</a>
+              </div>
             </div>
             <div class="link-overlay 3">
-              <a href="#" class="menu-link hover-underline discover-link">DISCOVER</a>
+              <div class="overlay-link-mobile">
+                <a href="#" class="menu-link hover-underline discover-link">SHOP</a>
+              </div>
             </div>
             <div class="link-overlay 4">
-              <a href="#" class="menu-link hover-underline help-link">HELP</a>
+              <div class="overlay-link-mobile">
+                <a href="#" class="menu-link hover-underline help-link">DISCOVER</a>
+              </div>
             </div>
             <div class="link-overlay 5">
-              <a href="#" class="menu-link mday-link">MARIO DAY</a>
+              <div class="overlay-link-mobile help-overlay-link">
+                <a href="#" class="menu-link hover-underline help-link">HELP</a>
+              </div>
             </div>
             <div class="link-overlay 6">
-              <div class="sign-in-text">
-                <a href="#" class="sign-in-link-style"> <svg width="20" height="22" viewBox="0 0 20 22"
+              <div class="overlay-link-mobile">
+                <a href="#" class="sign-in-link-style-mobile"> <svg width="20" height="22" viewBox="0 0 20 22"
                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                     class="Icon__StyledSVG-lm07h6-0 cnHyRF UtilityBarstyles__AccountIcon-sc-1uwh8t8-5 KHcEY">
                     <g transform="translate(1 1)" fill-rule="nonzero" fill="none">
@@ -195,18 +203,33 @@
               </div>
             </div>
             <div class="link-overlay 7">
-              <div class="sign-in-join">
-                <svg width="20" height="22" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="overlay-link-mobile overlay-join">
+                <a href="#" class="sign-in-link-style-mobile"><svg width="20" height="22" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M1 16.2592H8.12587V9.95541C8.12587 8.8478 9.01485 8 10.1437 8H29.8422C30.9851 8 31.86 8.86147 31.86 9.95541V16.2592H39V31H1V16.2592Z"
                     fill="#00A3DA" />
                 </svg>
-                <a href="#" class="sign-in-link-style"><span>Join LEGO® Insiders</span></a>
+                <span>Join LEGO® Insiders</span></a>
               </div>
             </div>
-            <div class="link-overlay 8"></div>
-            <div class="link-overlay 9"></div>
-            <div class="link-overlay 10"></div>
+            <div class="link-overlay 8">
+              <div class="overlay-link-mobile">
+                <span class="Markup__StyledMarkup-nc8x20-0 epIXnJ">My wishlist</span>
+              </div>
+            </div>
+            <div class="link-overlay 9">
+              <div class="overlay-link-mobile">
+                <span class="Markup__StyledMarkup-nc8x20-0 epIXnJ">My bag (0)</span>
+              </div>
+            </div>
+            <div class="link-overlay 10">
+              <div class="overlay-link-mobile">
+                <button aria-expanded="false" data-test="region-selector-button" class="overlay-button-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="17" height="24" viewBox="0 0 17 24" aria-hidden="true" class="Icon__StyledSVG-lm07h6-0 jYQZmq RegionSelectorstyles__PointerIcon-sc-14dxhlg-2 izbKLk">
+                    <path d="M8.303.89c2.065 0 3.92.818 5.258 2.156a7.391 7.391 0 012.156 5.257c0 4.906-5.485 11.795-7.414 14.066C6.373 20.097.89 13.21.89 8.303c0-2.065.818-3.92 2.156-5.257A7.391 7.391 0 018.303.89zm0 3.558a3.84 3.84 0 00-2.734 1.12 3.84 3.84 0 00-1.12 2.735 3.84 3.84 0 001.12 2.735 3.84 3.84 0 002.734 1.12 3.84 3.84 0 002.735-1.12 3.84 3.84 0 001.12-2.735 3.84 3.84 0 00-1.12-2.734 3.84 3.84 0 00-2.735-1.12z" stroke="currentColor" stroke-width="1.779" fill="none">
+                    </path></svg>Ireland</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
