--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
             </div>
             <div class="link-overlay 8">
               <div class="overlay-link-mobile">
-                <span class="Markup__StyledMarkup-nc8x20-0 epIXnJ">My wishlist</span>
+                <span class="my-wish-list m89">My wishlist</span>
               </div>
             </div>
             <div class="link-overlay 9">
               <div class="overlay-link-mobile">
-                <span class="Markup__StyledMarkup-nc8x20-0 epIXnJ">My bag (0)</span>
+                <span class="my-bag m89">My bag (0)</span>
               </div>
             </div>
             <div class="link-overlay 10">
-              <div class="overlay-link-mobile">
+              <div class="overlay-link-mobile link-10">
                 <button aria-expanded="false" data-test="region-selector-button" class="overlay-button-link">
                   <svg xmlns="http://www.w3.org/2000/svg" width="17" height="24" viewBox="0 0 17 24" aria-hidden="true" class="Icon__StyledSVG-lm07h6-0 jYQZmq RegionSelectorstyles__PointerIcon-sc-14dxhlg-2 izbKLk">
                     <path d="M8.303.89c2.065 0 3.92.818 5.258 2.156a7.391 7.391 0 012.156 5.257c0 4.906-5.485 11.795-7.414 14.066C6.373 20.097.89 13.21.89 8.303c0-2.065.818-3.92 2.156-5.257A7.391 7.391 0 018.303.89zm0 3.558a3.84 3.84 0 00-2.734 1.12 3.84 3.84 0 00-1.12 2.735 3.84 3.84 0 001.12 2.735 3.84 3.84 0 002.734 1.12 3.84 3.84 0 002.735-1.12 3.84 3.84 0 001.12-2.735 3.84 3.84 0 00-1.12-2.734 3.84 3.84 0 00-2.735-1.12z" stroke="currentColor" stroke-width="1.779" fill="none">
