--- a/index.html
+++ b/index.html
@@ -169,17 +169,29 @@
             </div>
             <div class="link-overlay 3">
               <div class="overlay-link-mobile">
-                <a href="#" class="menu-link hover-underline discover-link">SHOP</a>
+                <a href="#" class="shop-link-mobile hover-underline skelet-link discover-link">SHOP<svg width="10" height="13" viewBox="0 0 18 28"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></a>
               </div>
             </div>
             <div class="link-overlay 4">
               <div class="overlay-link-mobile">
-                <a href="#" class="menu-link hover-underline help-link">DISCOVER</a>
+                <a href="#" class="discover-link-mobile skelet-link hover-underline help-link">DISCOVER<svg width="10" height="13" viewBox="0 0 18 28"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></a>
               </div>
             </div>
             <div class="link-overlay 5">
               <div class="overlay-link-mobile help-overlay-link">
-                <a href="#" class="menu-link hover-underline help-link">HELP</a>
+                <a href="#" class="help-link-mobile skelet-link hover-underline help-link">HELP<svg width="10" height="13" viewBox="0 0 18 28"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                  <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+                </svg></a>
               </div>
             </div>
             <div class="link-overlay 6">
