Aggiunte modifiche alle section 8 e 9

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="contenitore-generale1-mobile">
           <div class="contenitore-section1-mobile">
             <div class="testo-section1-mobile">
-              <h2>Discover endless worlds of wonder</h2>
+              <h2>Endless worlds to create</h2>
               <p>Watch them Play Unstoppable and inspire their creativity
                 without limits.</p>
               <div class="iper-shop-now1-mobile">
