Aggiustati scroll section 8 e 9

--- a/index.html
+++ b/index.html
@@ -2741,7 +2741,7 @@
           </div>
         </section>
         <section class="m-section9">
-          <div class="title-main-section9">
+          <div class="title-main-section9 title-main-section9-mobile">
             <h2>So many ways to Play Unstoppable</h2>
           </div>
           <section class="container-section9">
@@ -2749,7 +2749,7 @@
               <div class="container-s9">
                 <a href="#">
                   <div class="container-card9 card1">
-                    <div class="card">
+                    <div class="card card9">
                       <img class="img-section9" src="assets/images/M_Section9/img1-section9.jpg" alt="Immagine1" />
                       <div class="card-body9">
                         <h3 class="card-title container-h3-s9">
@@ -2774,7 +2774,7 @@
                 </a>
                 <a href="#">
                   <div class="container-card9 card1">
-                    <div class="card">
+                    <div class="card card9">
                       <img class="img-section9" src="assets/images/M_Section9/img2-section9.jpg" alt="Immagine1" />
                       <div class="card-body9">
                         <h3 class="card-title container-h3-s9">
@@ -2801,7 +2801,7 @@
                 </a>
                 <a href="#">
                   <div class="container-card9 card2">
-                    <div class="card">
+                    <div class="card card9">
                       <img class="img-section9" src="assets/images/M_Section9/img3-section9.jpg" alt="Immagine2" />
                       <div class="card-body9">
                         <h3 class="card-title container-h3-s9">The Best LEGO® Easter Basket Ideas</h3>
@@ -2826,7 +2826,7 @@
                 </a>
                 <a href="#">
                   <div class="container-card9 card3">
-                    <div class="card">
+                    <div class="card card9">
                       <img class="img-section9" src="assets/images/M_Section9/img4-section9.jpg" alt="Immagine3" />
                       <div class="card-body9">
                         <h3 class="card-title container-h3-s9">11 Best LEGO® Sets for Adults 2024</h3>
