Aggiunta section 2 scomparsa

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
               <div class="container-s2-mobile">
                 <a href="#">
                   <div class="container-card card1">
-                    <div class="card">
+                    <div class="cards2">
                       <img class="img-section2" src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" />
                       <div class="card-body">
                         <h3 class="card-title container-h3-s2">
@@ -575,7 +575,7 @@
                 </a>
                 <a href="#">
                   <div class="container-card card2">
-                    <div class="card">
+                    <div class="cards2">
                       <img class="img-section2" src="assets/images/M_Section2/img2-section2-aggiornata.webp"
                         alt="Immagine2" />
                       <div class="card-body">
@@ -600,7 +600,7 @@
                 </a>
                 <a href="#">
                   <div class="container-card card3">
-                    <div class="card">
+                    <div class="cards2">
                       <img class="img-section2" src="assets/images/technic per main 2.jpg" alt="Immagine3" />
                       <div class="card-body">
                         <h3 class="card-title container-h3-s2">Get into your creative zone</h3>
